# kinfu_remake

./: .gitignore  CMakeLists.txt  README.md
apps/: CMakeLists.txt  demo.cpp  demo_bin.cpp
kfusion/: CMakeLists.txt
kfusion/include/io/: bin_grabber.hpp
kfusion/include/kfusion/: kinfu.hpp
kfusion/include/kfusion/cuda/: color_volume.hpp  tsdf_volume.hpp
kfusion/src/: bin_grabber.cpp  capture.cpp  color_volume.cpp  device_memory.cpp  internal.hpp  kinfu.cpp  precomp.cpp  precomp.hpp  tsdf_volume.cpp
kfusion/src/cuda/: color_volume.cu  device.hpp  imgproc.cu  tsdf_volume.cu
